[package]
name = "wrapper-chrono"
version = "0.1.0"
edition = "2021"
description = "chrono"
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/wrapper-chrono"
repository = "https://github.com/pas2rust/wrapper-chrono"
license = "MIT"
exclude = [
    "tests/*",
    "tests",
]

[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && cargo run"
test = "cargo fmt && cargo clippy && cargo test"
deploy = "cargo fmt && cargo clippy && cargo package && cargo publish"
clean = "cargo clean && rm -rf target && rm -rf dist"

[package.metadata.docs.rs]
logo-url = "https://i.imgur.com/svdzGva.jpg"

[dependencies]
chrono = "0.4.31"
colorful = "0.2.2"
darth-rust = "0.4.7"
serde = "1.0.195"
serde_json = "1.0.111"

[lib]
path = "src/lib.rs"
